prueba/MiniJavaParser.java
// $ANTLR 3.5.2 MiniJava.g 2025-10-13 01:11:04

    import java.util.HashMap;
    import java.util.LinkedHashMap;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class MiniJavaParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "CCURLYB", "CFLOAT", "CINT", 
		"CLASS", "COMMA", "DOT", "DOUBLE", "ELSE", "EQ", "FALSE", "GE", "GT", 
		"ID", "IF", "INT", "LE", "LT", "NE", "NOT", "OCURLYB", "OR", "PRIVATE", 
		"PROTECTED", "PUBLIC", "SEMICOLON", "TRUE", "VOID", "WHILE", "WS", "'('", 
		"')'", "'*'", "'+'", "'-'", "'/'", "'='"
	};
	public static final int EOF=-1;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int AND=4;
	public static final int CCURLYB=5;
	public static final int CFLOAT=6;
	public static final int CINT=7;
	public static final int CLASS=8;
	public static final int COMMA=9;
	public static final int DOT=10;
	public static final int DOUBLE=11;
	public static final int ELSE=12;
	public static final int EQ=13;
	public static final int FALSE=14;
	public static final int GE=15;
	public static final int GT=16;
	public static final int ID=17;
	public static final int IF=18;
	public static final int INT=19;
	public static final int LE=20;
	public static final int LT=21;
	public static final int NE=22;
	public static final int NOT=23;
	public static final int OCURLYB=24;
	public static final int OR=25;
	public static final int PRIVATE=26;
	public static final int PROTECTED=27;
	public static final int PUBLIC=28;
	public static final int SEMICOLON=29;
	public static final int TRUE=30;
	public static final int VOID=31;
	public static final int WHILE=32;
	public static final int WS=33;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public MiniJavaParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public MiniJavaParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return MiniJavaParser.tokenNames; }
	@Override public String getGrammarFileName() { return "MiniJava.g"; }


	    static final int T_INT=1, T_DOUBLE=2, T_MIXED=3, T_BOOL=4;

	    // --- Tablas de símbolos ---
	    HashMap<String,Integer> SymT = new HashMap<>();                 // Local por método
	    HashMap<String,ClassInfo> SymTG = new HashMap<>();              // Global

	    // Clase -> { atributos, metodos }
	    static class ClassInfo {
	        String name;
	        HashMap<String,Integer> attributes = new HashMap<>();
	        HashMap<String,MethodInfo> methods = new HashMap<>();
	        ClassInfo(String n){ this.name=n; }
	    }

	    static class MethodInfo {
	        String name;
	        int returnType;
	        LinkedHashMap<String,Integer> params = new LinkedHashMap<>();
	        HashMap<String,Integer> locals = new HashMap<>();
	        MethodInfo(String n,int rt){ name=n; returnType=rt; }
	    }

	    String currentClass = null;
	    MethodInfo currentMethod = null;

	    private javax.swing.JTextArea salida;
	    public void setSalida(javax.swing.JTextArea ta){ this.salida = ta; }
	    private void log(String s){ if(salida!=null) salida.append("\n"+s); }

	    private int strTypeToInt(String t){
	        if("int".equals(t)) return T_INT;
	        if("double".equals(t)) return T_DOUBLE;
	        // if("void".equals(t)) return T_VOID; // no lo usamos para variables
	        return T_MIXED;
	    }

	    private void pushClass(String name){
	        if(SymTG.containsKey(name)){
	            log("[ERR] Clase redeclarada: "+name);
	        } else {
	            SymTG.put(name,new ClassInfo(name));
	            log("[OK] Clase registrada: "+name);
	        }
	    }

	    private void pushAttribute(String id, String tipo){
	        if(currentClass==null){ log("[ERR] Atributo fuera de clase: "+id); return; }
	        ClassInfo C = SymTG.get(currentClass);
	        if(C==null){ log("[ERR] Contexto de clase no inicializado: "+currentClass); return; }
	        if(C.attributes.containsKey(id)){
	            log("[ERR] Atributo redeclarado en "+currentClass+": "+id);
	        } else {
	            C.attributes.put(id, strTypeToInt(tipo));
	            log("[OK] Atributo "+currentClass+"."+id+" : "+tipo);
	        }
	    }

	    private void pushMethod(String name, String retType){
	        if(currentClass==null){ log("[ERR] Método fuera de clase: "+name); return; }
	        ClassInfo C = SymTG.get(currentClass);
	        if(C==null){ log("[ERR] Contexto de clase no inicializado: "+currentClass); return; }
	        if(C.methods.containsKey(name)){
	            log("[ERR] Método redeclarado en "+currentClass+": "+name);
	        } else {
	            currentMethod = new MethodInfo(name, strTypeToInt(retType));
	            C.methods.put(name, currentMethod);
	            log("[OK] Método "+currentClass+"."+name+" : "+retType);
	        }
	    }

	    private void pushLocal(String id, String tipo){
	        if(SymT.containsKey(id)){
	            log("[ERR] Identificador local redeclarado en método: "+id);
	        } else {
	            int t = strTypeToInt(tipo);
	            SymT.put(id, t);
	            if(currentMethod!=null) currentMethod.locals.put(id, t);
	            log("Insertando a TS local: "+id+" : "+tipo);
	        }
	    }

	    private int lookupVarType(String id){
	        Integer t = SymT.get(id);
	        if(t != null) return t;
	        if(currentClass != null){
	            ClassInfo C = SymTG.get(currentClass);
	            if(C != null){
	                Integer ta = C.attributes.get(id);
	                if(ta != null) return ta;
	            }
	        }
	        log("[ERR] Uso de variable no declarada: " + id);
	        return T_MIXED;
	    }

	    private int ensureBool(String ctx, int t){
	        if(t!=T_BOOL){
	            log("[ERR] La condición de "+ctx+" debe ser booleana, no de tipo "+t);
	            return T_MIXED;
	        }
	        return T_BOOL;
	    }

	    private int mixBool(int a, int b, String ctx){
	        if(a==T_BOOL && b==T_BOOL) return T_BOOL;
	        log("[ERR] "+ctx+" requiere operandos booleanos (recibidos "+a+" y "+b+")");
	        return T_MIXED;
	    }

	    private int mixTypes(int a, int b, String ctx){
	        if(a==T_MIXED || b==T_MIXED) return T_MIXED;
	        if(a!=b){
	            log("[ERR] "+ctx+" entre tipos distintos ("+a+" vs "+b+")");
	            return T_MIXED;
	        }
	        return a;
	    }

	    // --- (Opcional) promoción int→double para expresiones/comparaciones ---
	    private int promote(int a, int b){
	        if(a==T_DOUBLE || b==T_DOUBLE) return T_DOUBLE;
	        if(a==T_INT && b==T_INT) return T_INT;
	        return T_MIXED;
	    }



	// $ANTLR start "program"
	// MiniJava.g:134:1: program : ( classes )+ ;
	public final void program() throws RecognitionException {
		try {
			// MiniJava.g:134:8: ( ( classes )+ )
			// MiniJava.g:134:10: ( classes )+
			{
			// MiniJava.g:134:10: ( classes )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( ((LA1_0 >= PRIVATE && LA1_0 <= PUBLIC)) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// MiniJava.g:134:10: classes
					{
					pushFollow(FOLLOW_classes_in_program18);
					classes();
					state._fsp--;

					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "program"



	// $ANTLR start "classes"
	// MiniJava.g:136:1: classes : accesmod CLASS id= ID OCURLYB ( member )* CCURLYB ;
	public final void classes() throws RecognitionException {
		Token id=null;

		try {
			// MiniJava.g:137:5: ( accesmod CLASS id= ID OCURLYB ( member )* CCURLYB )
			// MiniJava.g:137:7: accesmod CLASS id= ID OCURLYB ( member )* CCURLYB
			{
			pushFollow(FOLLOW_accesmod_in_classes31);
			accesmod();
			state._fsp--;

			match(input,CLASS,FOLLOW_CLASS_in_classes33); 
			id=(Token)match(input,ID,FOLLOW_ID_in_classes37); 
			 currentClass = (id!=null?id.getText():null); pushClass(currentClass); 
			match(input,OCURLYB,FOLLOW_OCURLYB_in_classes53); 
			// MiniJava.g:139:15: ( member )*
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( ((LA2_0 >= PRIVATE && LA2_0 <= PUBLIC)) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// MiniJava.g:139:17: member
					{
					pushFollow(FOLLOW_member_in_classes57);
					member();
					state._fsp--;

					}
					break;

				default :
					break loop2;
				}
			}

			match(input,CCURLYB,FOLLOW_CCURLYB_in_classes62); 
			 currentClass = null; 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "classes"



	// $ANTLR start "member"
	// MiniJava.g:143:1: member : ( method | property );
	public final void member() throws RecognitionException {
		try {
			// MiniJava.g:143:8: ( method | property )
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( ((LA3_0 >= PRIVATE && LA3_0 <= PUBLIC)) ) {
				int LA3_1 = input.LA(2);
				if ( (LA3_1==DOUBLE||LA3_1==INT) ) {
					int LA3_2 = input.LA(3);
					if ( (LA3_2==ID) ) {
						int LA3_4 = input.LA(4);
						if ( (LA3_4==34) ) {
							alt3=1;
						}
						else if ( (LA3_4==COMMA||LA3_4==SEMICOLON) ) {
							alt3=2;
						}

						else {
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 3, 4, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 3, 2, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}
				else if ( (LA3_1==VOID) ) {
					alt3=1;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 3, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// MiniJava.g:143:10: method
					{
					pushFollow(FOLLOW_method_in_member83);
					method();
					state._fsp--;

					}
					break;
				case 2 :
					// MiniJava.g:143:19: property
					{
					pushFollow(FOLLOW_property_in_member87);
					property();
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "member"



	// $ANTLR start "property"
	// MiniJava.g:147:1: property : accesmod t= tipoVar id1= ID ( COMMA id2= ID )* SEMICOLON ;
	public final void property() throws RecognitionException {
		Token id1=null;
		Token id2=null;
		ParserRuleReturnScope t =null;

		try {
			// MiniJava.g:148:5: ( accesmod t= tipoVar id1= ID ( COMMA id2= ID )* SEMICOLON )
			// MiniJava.g:148:7: accesmod t= tipoVar id1= ID ( COMMA id2= ID )* SEMICOLON
			{
			pushFollow(FOLLOW_accesmod_in_property102);
			accesmod();
			state._fsp--;

			pushFollow(FOLLOW_tipoVar_in_property106);
			t=tipoVar();
			state._fsp--;

			id1=(Token)match(input,ID,FOLLOW_ID_in_property110); 
			 pushAttribute((id1!=null?id1.getText():null), (t!=null?input.toString(t.start,t.stop):null)); 
			// MiniJava.g:149:7: ( COMMA id2= ID )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==COMMA) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// MiniJava.g:149:9: COMMA id2= ID
					{
					match(input,COMMA,FOLLOW_COMMA_in_property122); 
					id2=(Token)match(input,ID,FOLLOW_ID_in_property126); 
					 pushAttribute((id2!=null?id2.getText():null), (t!=null?input.toString(t.start,t.stop):null)); 
					}
					break;

				default :
					break loop4;
				}
			}

			match(input,SEMICOLON,FOLLOW_SEMICOLON_in_property139); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "property"



	// $ANTLR start "method"
	// MiniJava.g:155:1: method : accesmod t= tipoRet m= ID '(' ( decl_args )? ')' OCURLYB ( sentences )* CCURLYB ;
	public final void method() throws RecognitionException {
		Token m=null;
		ParserRuleReturnScope t =null;

		try {
			// MiniJava.g:156:5: ( accesmod t= tipoRet m= ID '(' ( decl_args )? ')' OCURLYB ( sentences )* CCURLYB )
			// MiniJava.g:156:7: accesmod t= tipoRet m= ID '(' ( decl_args )? ')' OCURLYB ( sentences )* CCURLYB
			{
			pushFollow(FOLLOW_accesmod_in_method158);
			accesmod();
			state._fsp--;

			pushFollow(FOLLOW_tipoRet_in_method162);
			t=tipoRet();
			state._fsp--;

			m=(Token)match(input,ID,FOLLOW_ID_in_method166); 
			match(input,34,FOLLOW_34_in_method174); 
			 pushMethod((m!=null?m.getText():null), (t!=null?input.toString(t.start,t.stop):null)); 
			// MiniJava.g:157:45: ( decl_args )?
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==DOUBLE||LA5_0==INT) ) {
				alt5=1;
			}
			switch (alt5) {
				case 1 :
					// MiniJava.g:157:45: decl_args
					{
					pushFollow(FOLLOW_decl_args_in_method178);
					decl_args();
					state._fsp--;

					}
					break;

			}

			match(input,35,FOLLOW_35_in_method181); 
			match(input,OCURLYB,FOLLOW_OCURLYB_in_method189); 
			// MiniJava.g:158:15: ( sentences )*
			loop6:
			while (true) {
				int alt6=2;
				int LA6_0 = input.LA(1);
				if ( (LA6_0==DOUBLE||(LA6_0 >= ID && LA6_0 <= INT)||LA6_0==WHILE) ) {
					alt6=1;
				}

				switch (alt6) {
				case 1 :
					// MiniJava.g:158:15: sentences
					{
					pushFollow(FOLLOW_sentences_in_method191);
					sentences();
					state._fsp--;

					}
					break;

				default :
					break loop6;
				}
			}

			match(input,CCURLYB,FOLLOW_CCURLYB_in_method194); 
			 currentMethod = null; SymT.clear(); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "method"



	// $ANTLR start "decl_args"
	// MiniJava.g:162:1: decl_args : t1= tipoVar id1= ID ( COMMA t2= tipoVar id2= ID )* ;
	public final void decl_args() throws RecognitionException {
		Token id1=null;
		Token id2=null;
		ParserRuleReturnScope t1 =null;
		ParserRuleReturnScope t2 =null;

		try {
			// MiniJava.g:163:5: (t1= tipoVar id1= ID ( COMMA t2= tipoVar id2= ID )* )
			// MiniJava.g:163:7: t1= tipoVar id1= ID ( COMMA t2= tipoVar id2= ID )*
			{
			pushFollow(FOLLOW_tipoVar_in_decl_args221);
			t1=tipoVar();
			state._fsp--;

			id1=(Token)match(input,ID,FOLLOW_ID_in_decl_args225); 

			          pushLocal((id1!=null?id1.getText():null), (t1!=null?input.toString(t1.start,t1.stop):null));
			          if(currentMethod!=null) currentMethod.params.put((id1!=null?id1.getText():null), strTypeToInt((t1!=null?input.toString(t1.start,t1.stop):null)));
			      
			// MiniJava.g:167:7: ( COMMA t2= tipoVar id2= ID )*
			loop7:
			while (true) {
				int alt7=2;
				int LA7_0 = input.LA(1);
				if ( (LA7_0==COMMA) ) {
					alt7=1;
				}

				switch (alt7) {
				case 1 :
					// MiniJava.g:167:9: COMMA t2= tipoVar id2= ID
					{
					match(input,COMMA,FOLLOW_COMMA_in_decl_args237); 
					pushFollow(FOLLOW_tipoVar_in_decl_args241);
					t2=tipoVar();
					state._fsp--;

					id2=(Token)match(input,ID,FOLLOW_ID_in_decl_args245); 

					          pushLocal((id2!=null?id2.getText():null), (t2!=null?input.toString(t2.start,t2.stop):null));
					          if(currentMethod!=null) currentMethod.params.put((id2!=null?id2.getText():null), strTypeToInt((t2!=null?input.toString(t2.start,t2.stop):null)));
					      
					}
					break;

				default :
					break loop7;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "decl_args"



	// $ANTLR start "decl_local"
	// MiniJava.g:173:1: decl_local : t= tipoVar id1= ID ( COMMA id2= ID )* SEMICOLON ;
	public final void decl_local() throws RecognitionException {
		Token id1=null;
		Token id2=null;
		ParserRuleReturnScope t =null;

		try {
			// MiniJava.g:174:5: (t= tipoVar id1= ID ( COMMA id2= ID )* SEMICOLON )
			// MiniJava.g:174:7: t= tipoVar id1= ID ( COMMA id2= ID )* SEMICOLON
			{
			pushFollow(FOLLOW_tipoVar_in_decl_local269);
			t=tipoVar();
			state._fsp--;

			id1=(Token)match(input,ID,FOLLOW_ID_in_decl_local273); 
			 pushLocal((id1!=null?id1.getText():null), (t!=null?input.toString(t.start,t.stop):null)); 
			// MiniJava.g:175:7: ( COMMA id2= ID )*
			loop8:
			while (true) {
				int alt8=2;
				int LA8_0 = input.LA(1);
				if ( (LA8_0==COMMA) ) {
					alt8=1;
				}

				switch (alt8) {
				case 1 :
					// MiniJava.g:175:9: COMMA id2= ID
					{
					match(input,COMMA,FOLLOW_COMMA_in_decl_local285); 
					id2=(Token)match(input,ID,FOLLOW_ID_in_decl_local289); 
					 pushLocal((id2!=null?id2.getText():null), (t!=null?input.toString(t.start,t.stop):null)); 
					}
					break;

				default :
					break loop8;
				}
			}

			match(input,SEMICOLON,FOLLOW_SEMICOLON_in_decl_local302); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "decl_local"



	// $ANTLR start "sentences"
	// MiniJava.g:179:1: sentences : ( assignment | decl_local | ifStmt | whileStmt );
	public final void sentences() throws RecognitionException {
		try {
			// MiniJava.g:179:12: ( assignment | decl_local | ifStmt | whileStmt )
			int alt9=4;
			switch ( input.LA(1) ) {
			case ID:
				{
				alt9=1;
				}
				break;
			case DOUBLE:
			case INT:
				{
				alt9=2;
				}
				break;
			case IF:
				{
				alt9=3;
				}
				break;
			case WHILE:
				{
				alt9=4;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 9, 0, input);
				throw nvae;
			}
			switch (alt9) {
				case 1 :
					// MiniJava.g:179:14: assignment
					{
					pushFollow(FOLLOW_assignment_in_sentences316);
					assignment();
					state._fsp--;

					}
					break;
				case 2 :
					// MiniJava.g:179:27: decl_local
					{
					pushFollow(FOLLOW_decl_local_in_sentences320);
					decl_local();
					state._fsp--;

					}
					break;
				case 3 :
					// MiniJava.g:179:40: ifStmt
					{
					pushFollow(FOLLOW_ifStmt_in_sentences324);
					ifStmt();
					state._fsp--;

					}
					break;
				case 4 :
					// MiniJava.g:179:49: whileStmt
					{
					pushFollow(FOLLOW_whileStmt_in_sentences328);
					whileStmt();
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "sentences"



	// $ANTLR start "assignment"
	// MiniJava.g:181:1: assignment : lhs= ID '=' e= expr SEMICOLON ;
	public final void assignment() throws RecognitionException {
		Token lhs=null;
		int e =0;
